quick fix on latex creation

--- a/Mini_Project/variables.tex
+++ b/Mini_Project/variables.tex
@@ -1,26 +1,26 @@
-\newcommand{\J}{5}
-\newcommand{\gamma_HH}{-0.2}
-\newcommand{\gamma_HL}{0.5}
-\newcommand{\gamma_LL}{-0.5}
-\newcommand{\gamma_LH}{0.7}
-\newcommand{\iota}{0.05}
-\newcommand{\phi}{1}
-\newcommand{\phi_geo}{0.3}
-\newcommand{\phi_reg}{0.4}
-\newcommand{\phi_a}{0.5}
-\newcommand{\beta_x}{[0.3, 0.7]}
-\newcommand{\beta_a}{[0.6, 0.4]}
-\newcommand{\beta_st}{[0.2, 0.5]}
-\newcommand{\beta_w}{[0.6, 0.5]}
-\newcommand{\zeta}{0.8}
-\newcommand{\H}{{'N': 100, 'p_black': 0.2, 'p_state': 0.1}}
-\newcommand{\L}{{'N': 200, 'p_black': 0.9, 'p_state': 0.8}}
-\newcommand{\x_geo}{{'mu': 0, 'sigma': 1}}
-\newcommand{\x_reg}{{'mu': 0, 'sigma': 1}}
-\newcommand{\x_st}{{'p': 0.1}}
-\newcommand{\CC}{{'mu': 0, 'sigma': 1}}
-\newcommand{\x}{{'mu': 0, 'sigma': 1}}
-\newcommand{\a}{{'mu': 0, 'sigma': 1}}
-\newcommand{\epsilon_H}{{'mu': 2, 'sigma': 1}}
-\newcommand{\epsilon_L}{{'mu': 1, 'sigma': 1}}
-\newcommand{\epsilon_a}{{'mu': 0, 'sigma': 1}}
+\newcommand{\params_J}{5}
+\newcommand{\params_gamma_HH}{-0.2}
+\newcommand{\params_gamma_HL}{0.5}
+\newcommand{\params_gamma_LL}{-0.5}
+\newcommand{\params_gamma_LH}{0.7}
+\newcommand{\params_iota}{0.05}
+\newcommand{\params_phi}{1}
+\newcommand{\params_phi_geo}{0.3}
+\newcommand{\params_phi_reg}{0.4}
+\newcommand{\params_phi_a}{0.5}
+\newcommand{\params_beta_x}{[0.3, 0.7]}
+\newcommand{\params_beta_a}{[0.6, 0.4]}
+\newcommand{\params_beta_st}{[0.2, 0.5]}
+\newcommand{\params_beta_w}{[0.6, 0.5]}
+\newcommand{\params_zeta}{0.8}
+\newcommand{\params_H}{{'N': 100, 'p_black': 0.2, 'p_state': 0.1}}
+\newcommand{\params_L}{{'N': 200, 'p_black': 0.9, 'p_state': 0.8}}
+\newcommand{\params_x_geo}{{'mu': 0, 'sigma': 1}}
+\newcommand{\params_x_reg}{{'mu': 0, 'sigma': 1}}
+\newcommand{\params_x_st}{{'p': 0.1}}
+\newcommand{\params_CC}{{'mu': 0, 'sigma': 1}}
+\newcommand{\params_x}{{'mu': 0, 'sigma': 1}}
+\newcommand{\params_a}{{'mu': 0, 'sigma': 1}}
+\newcommand{\params_epsilon_H}{{'mu': 2, 'sigma': 1}}
+\newcommand{\params_epsilon_L}{{'mu': 1, 'sigma': 1}}
+\newcommand{\params_epsilon_a}{{'mu': 0, 'sigma': 1}}
