--- a/Mini_Project/variables.tex
+++ b/Mini_Project/variables.tex
@@ -1,39 +1,32 @@
-% Auto-generated LaTeX macros from TOML file
-\newcommand{\paramsJ}{5}
-\newcommand{\paramsgammaHH}{-0.2}
-\newcommand{\paramsgammaHL}{0.5}
-\newcommand{\paramsgammaLL}{-0.5}
-\newcommand{\paramsgammaLH}{0.7}
-\newcommand{\paramsiota}{0.05}
-\newcommand{\paramsphi}{1}
-\newcommand{\paramsphigeo}{0.3}
-\newcommand{\paramsphireg}{0.4}
-\newcommand{\paramsphia}{0.5}
-\newcommand{\paramsbetax}{\{0.3, 0.7\}}
-\newcommand{\paramsbetaa}{\{0.6, 0.4\}}
-\newcommand{\paramsbetast}{\{0.2, 0.5\}}
-\newcommand{\paramsbetaw}{\{0.6, 0.5\}}
-\newcommand{\paramszeta}{0.8}
-\newcommand{\paramsparamsHN}{100}
-\newcommand{\paramsparamsHpblack}{0.2}
-\newcommand{\paramsparamsHpstate}{0.1}
-\newcommand{\paramsparamsLN}{200}
-\newcommand{\paramsparamsLpblack}{0.9}
-\newcommand{\paramsparamsLpstate}{0.8}
-\newcommand{\paramsparamsxgeomu}{0}
-\newcommand{\paramsparamsxgeosigma}{1}
-\newcommand{\paramsparamsxregmu}{0}
-\newcommand{\paramsparamsxregsigma}{1}
-\newcommand{\paramsparamsxstp}{0.1}
-\newcommand{\paramsparamsCCmu}{0}
-\newcommand{\paramsparamsCCsigma}{1}
-\newcommand{\paramsparamsxmu}{0}
-\newcommand{\paramsparamsxsigma}{1}
-\newcommand{\paramsparamsamu}{0}
-\newcommand{\paramsparamsasigma}{1}
-\newcommand{\paramsparamsepsilonHmu}{2}
-\newcommand{\paramsparamsepsilonHsigma}{1}
-\newcommand{\paramsparamsepsilonLmu}{1}
-\newcommand{\paramsparamsepsilonLsigma}{1}
-\newcommand{\paramsparamsepsilonamu}{0}
-\newcommand{\paramsparamsepsilonasigma}{1}
+\newcommand{\params_J}{50}
+\newcommand{\params_NUM_STATES}{10}
+\newcommand{\params_gamma_HH}{-0.2}
+\newcommand{\params_gamma_HL}{0.5}
+\newcommand{\params_gamma_LL}{-0.5}
+\newcommand{\params_gamma_LH}{0.7}
+\newcommand{\params_alpha_HH}{0.8}
+\newcommand{\params_alpha_HL}{0.1}
+\newcommand{\params_alpha_LH}{0.2}
+\newcommand{\params_alpha_LL}{0.7}
+\newcommand{\params_iota}{0.05}
+\newcommand{\params_phi}{1}
+\newcommand{\params_phi_geo}{0.3}
+\newcommand{\params_phi_reg}{0.4}
+\newcommand{\params_phi_a}{0.5}
+\newcommand{\params_beta_x}{[0.3, 0.7]}
+\newcommand{\params_beta_a}{[0.6, 0.4]}
+\newcommand{\params_beta_st}{[0.2, 0.5]}
+\newcommand{\params_beta_w}{[0.6, 0.5]}
+\newcommand{\params_zeta}{0.8}
+\newcommand{\params_H}{{'N': 100, 'p_black': 0.2}}
+\newcommand{\params_L}{{'N': 200, 'p_black': 0.9}}
+\newcommand{\params_Z_H}{{'mu': 0, 'sigma': 1}}
+\newcommand{\params_Z_L}{{'mu': 0, 'sigma': 1}}
+\newcommand{\params_x_geo}{{'mu': 0, 'sigma': 1}}
+\newcommand{\params_x_reg}{{'mu': 0, 'sigma': 1}}
+\newcommand{\params_CC}{{'mu': 0, 'sigma': 1}}
+\newcommand{\params_x}{{'mu': 0, 'sigma': 1}}
+\newcommand{\params_a}{{'mu': 0, 'sigma': 1}}
+\newcommand{\params_epsilon_H}{{'mu': 2, 'sigma': 1}}
+\newcommand{\params_epsilon_L}{{'mu': 1, 'sigma': 1}}
+\newcommand{\params_epsilon_a}{{'mu': 0, 'sigma': 1}}
