--- a/Mini_Project/main.tex
+++ b/Mini_Project/main.tex
@@ -83,9 +83,9 @@ Substituting into the indirect utility function worker $i$ would receive from li
 \begin{align}
     V_{ijt} &= \log n - \zeta \log \frac{n}{\ell} + s_i(A_{jt}) \nonumber \\ 
     &= \log \frac{W^X_{jt}}{p^n_{t}} - \zeta \log\frac{p^n_{t}}{p^\ell_{jt}} + \log\frac{(\zeta)^\zeta}{(1-\zeta)^{1-\zeta}} + s_i(A_{jt})  \nonumber \\
-    &\equiv w^X_{jt} - \zeta p_{jt} + s_i(A_{jt})
+    &\equiv w^X_{jt} - \zeta r_{jt} + s_i(A_{jt})
 \end{align}
-where $p_{jt} \equiv \log p_t^n/p_{jt}^\ell$ and we can renormalize the indirect utility function to get rid of the constant.
+where $r_{jt} \equiv \log p_t^n/p_{jt}^\ell$ and we can renormalize the indirect utility function to get rid of the constant.
 Then, worker demand for local goods is,
 \begin{equation}\label{eq_worker_local_demand}
     HD_{ijt} = \zeta \frac{W^X_{jt}}{p^\ell_{jt}}
@@ -110,9 +110,9 @@ Our assumption implies that workers value city amenities differently based on th
 
 
 We renormalize the utility function by dividing each workers' utility by $\beta^\sigma z_i$. Then, with this renormalization,
-$$V_{ijt} = (w_{jt}-\zeta p_{jt})\beta^w z_i + a_{jt}\beta_i^a + x_{jt}^A\beta_i^x + \beta_i^{st}x_{j}^{st} + \varepsilon_{ijt}$$ %% WHERE DOES beta^w come from? Inverse of beta^sigma? :|
+$$V_{ijt} = (w_{jt}-\zeta r_{jt})\beta^w z_i + a_{jt}\beta_i^a + x_{jt}^A\beta_i^x + \beta_i^{st}x_{j}^{st} + \varepsilon_{ijt}$$ %% WHERE DOES beta^w come from? Inverse of beta^sigma? :|
 Define $\delta_{jt}^z$ as the utility value of the components of the city $j$ which all workers of type $z$ value identically,
-$$\delta_{jt}^z = (w_{jt} - \zeta p_{jt})\beta^w z + a_{jt}\beta^a z + x_{jt}^A\beta^xz$$
+$$\delta_{jt}^z = (w_{jt} - \zeta r_{jt})\beta^w z + a_{jt}\beta^a z + x_{jt}^A\beta^xz$$
 Then,
 $$V_{ijt} = \delta_{jt}^z + x_j^{st}st_i\beta^{st}z_i + \varepsilon_{ijt}$$
 Given the distribution of $\varepsilon$, observe that this is the standard conditional logit model. In particular, we can interpret aggregate population differences in cities of workers of type $z$ as differences in the average utility for these cities. Hence, the expected population of high and low skill workers in each city is just the probability of living in a given city summed over all workers of that type, i.e.: 
@@ -122,29 +122,32 @@ L_{jt} &= \sum_{i\in\mc{L}_t} \frac{\exp(\delta_{jt}^z + x_j^{st}st_i\beta^{st}z
 \end{align}
 where $\mc{H}_t$ and $\mc{L}_t$ represent the total set of high and low-skill workers in year $t$, respectively.
 
-In the equations above, we observe high and low-skill populations ($X_{jt}$) and their wages ($w_{jt}^X$) for $X \in \{H, L\}$. Additionally, we observe rent $p_{jt}$, the endogeneous amenity index $a_{jt}$, workers' demographics $\bm{z}$ and their stateof birth ($st_i$). Exogenous amenities $x_{jt}^A$ and idiosyncratic worker tastes for cities $\varepsilon_{ijt}$ are unobserved. Parameters to be estimated are $\zeta$ and $\beta \equiv (\beta^w, \beta^a, \beta^x, \beta^{st})$.
+In the equations above, we observe high and low-skill populations ($X_{jt}$) and their wages ($w_{jt}^X$) for $X \in \{H, L\}$. Additionally, we observe rent $r_{jt}$, the endogeneous amenity index $a_{jt}$, workers' demographics $\bm{z}$ and their stateof birth ($st_i$). Exogenous amenities $x_{jt}^A$ and idiosyncratic worker tastes for cities $\varepsilon_{ijt}$ are unobserved. Parameters to be estimated are $\zeta$ and $\beta \equiv (\beta^w, \beta^a, \beta^x, \beta^{st})$.
 
 \subsection{Housing Supply}
 Local prices, $p^\ell_{jt}$, which represent local housing costs and the price of a composite good, are set in equilibrium. Inputs into the production of housing include construction materials and land. The housing market is competitive and prices are sold at the marginal cost of production,
-$$P_{jt} = MC(CC_{jt}, LC_{jt})$$
+$$r_{jt} = MC(CC_{jt}, LC_{jt})$$
 where $CC_{jt}$ are construction costs and $LC_{jt}$ are land costs. This assumption simplifies the model by ensuring prices adjust to cost conditions without market power distortions. Rents are given by,
 $$R_{jt} = \iota_t MC(CC_{jt},LC_{jt})$$
 where $\iota_t$ is the discount rate on housing. We parametrize the log housing supply equation as,
-\begin{equation}
+\begin{equation}\label{eq: housing supply}
     r_{jt} \equiv \log R_{jt} = \log \iota_t + \log CC_{jt} + \varphi_j \log HD_{jt}.
 \end{equation}
-This captures how the rents respond to construction costs and housing demand. The elasticity term $\gamma_j$ varies by geography and regulation
+This captures how the rents respond to construction costs and housing demand. The elasticity term $\varphi_j$ varies by geography and regulation
 $$\varphi_j = \varphi + \varphi^{geo}\exp(x_j^{geo}) + \varphi^{reg} \exp(x_j^{reg}).$$
 This captures the fact that responses to changes in housing demand will be heterogeneous by city and depend on geographic constraints (e.g., mountains, lakes, etc.) and regulatory constraints (e.g., zoning laws, etc.). 
 Finally, note that aggregate local housing demand is given as
-$$HD_{jt} = L_{jt} \frac{\zeta W_{jt}^L}{R_{jt}} + H_{jt} \frac{\zeta W_{jt}^H}{R_{jt}}$$
+\begin{equation} \label{eq: housing demand}
+HD_{jt} = L_{jt} \frac{\zeta W_{jt}^L}{R_{jt}} + H_{jt} \frac{\zeta W_{jt}^H}{R_{jt}}
+\end{equation}
 where we set $R_{jt} = p^\ell$, assuming that local costs are equal to rental costs.
 
 In the housing supply equation, housing rents $r_{jt}$, land unavailability ($x^{geo}_j$ and $x^{reg}_j$), and local good demand $HD_{jt}$ are observed. Construction costs $CC_{jt}$ and the interest rate $\iota_t$ are unobserved. Parameters to be estimated are housing supply elasticities ($\varphi, \varphi^{geo}, \varphi^{reg}$) and the local good expenditure share $\zeta$.   
 
 \subsection{Amenity Supply}
 The endogenous amenity is chosen by cities and is a function of the employment ratio,
-$$a_{jt} = \varphi^a \log(H_{jt}/L_{jt}) + \varepsilon^a_{jt}$$
+\begin{equation}\label{eq: amenity supply} 
+a_{jt} = \varphi^a \log(H_{jt}/L_{jt}) + \varepsilon^a_{jt} \end{equation}
 where $\varphi^a$ is the elasticity of amenity supply. Here, $a_{jt}$ is an index measuring the endogeneous amenities of a city. Thus, we allow this amenity index to respond to changes in the skill composition of a city. This setup is motivated by a rich literature showing that city amenities respond to the income levels of residents. 
 
 
@@ -165,24 +168,177 @@ $$ HD_{jt}^* = L_{jt}^* \frac{\zeta \exp(w_{jt}^{L^*})}{\exp(r_{jt}^*)} + H_{jt}
 
 \item The amenity market clears in each MSA $j$ at time $t$
 $$a_{jt}^* = \varphi^a \ln\left(\frac{H_{jt}^*}{L_{jt}^*}\right) + \epsilon_{jt}^a$$
-$$\delta_{jt}^z = (w^{X*}_{jt} - \zeta p_{jt}^*)\beta^w z + a_{jt}^* \beta^a z + x_{jt}^A\beta^xz, \quad \forall \bm{z}.$$
+$$\delta_{jt}^z = (w^{X*}_{jt} - \zeta r_{jt}^*)\beta^w z + a_{jt}^* \beta^a z + x_{jt}^A\beta^xz, \quad \forall \bm{z}.$$
 \end{enumerate}
 
 \section{Simulation Procedure}
 
-We simulate the endogenous variables in our model through a simple fixed point procedure that uses our market clearing conditions. Table \ref{tab:parameter_values} lists our parameter values 
+We simulate the endogenous variables in our model through a simple fixed point procedure that uses our market clearing conditions. Table \ref{tab:parameter_values} lists our parameter values for our simulations. The broad strokes of our procedure are as follows: 
+\begin{enumerate}
+\item Draw exogenous variables given our parameters. These are housing supply, population demographics, amenities, and shocks to productivity and amenities. 
+\item In the outer loop, we run a fixed point algorithm: for a given level of wages,  rents, and endogeneous amenities we can calculate the mean utility levels $\delta^z_{jt}$ for each skill type $z$, which, together with the shocks, implies predicted population levels for each skill type according to equations (9) and (10). This in term implies new guesses of $w^H_{jt}$ and $w^L_{jt}$ using the labor supply equations (3) and (4), and implies a new level of amenities using the amenity supply equation (\ref{eq: amenity supply}).
 
+\item In the inner loop, we find the conjectured rent level corresponding to the conjectured wage level by numerically solving equations \ref{eq: housing supply} and \ref{eq: housing demand} to yield an updated guess for rents. 
+\end{enumerate}
 
-\begin{table}[H]
-\caption {Entry}
+\begin{table}[h]
+\caption {Parameter Values}
 \begin{center}
- \label{tab:parameter_values} 
-\begin{tabular}{l|rrr} & Berry & Berry (fixed $\sigma^2$ =1) & Ciliberto and Tamer (95\% CI)\\\hline
-$\hat{\mu}$ & 1.857 & 2.172 & [1.9, 2.7] \\
-$\hat{\sigma^2}$ & 1.145 & NA & NA \\
+\label{tab:parameter_values} 
+\begin{tabular}{l|r} \textbf{Parameter} & \textbf{Value} \\\hline \hline 
+\multicolumn{2}{l}{Population parameters}  \\
+\hline
+$J$ & \paramsJ \\ 
+$N_H$ & \paramsparamsHN \\   
+$\mathbb{P}(black|H)$ & \paramsparamsHpblack \\   
+$\mathbb{P}(same\:state|H)$ & \paramsparamsHpstate \\   
+
+$N_L$ & \paramsparamsLN \\   
+$\mathbb{P}(black|L)$ & \paramsparamsLpblack \\ 
+$\mathbb{P}(same\:state|L)$ & \paramsparamsLpstate \\   
+
+\hline
+\multicolumn{2}{l}{Labor supply elasticities}  \\
+\hline
+$\gamma_{HH}$ & \paramsgammaHH \\
+$\gamma_{HL}$ & \paramsgammaHL \\
+$\gamma_{LL}$ & \paramsgammaLL \\ 
+$\gamma_{LH}$ & \paramsgammaLH \\ 
+\hline 
+\multicolumn{2}{l}{Housing supply parameters}  \\
+\hline
+
+$\iota$ & \paramsiota \\ 
+$\phi$ & \paramsphi \\ 
+$\phi_{geo}$ & \paramsphigeo \\ 
+$\phi_{reg}$ & \paramsphireg \\ 
+\hline 
+\multicolumn{2}{l}{Preference parameters (\{White, Black\})}  \\
+\hline
+
+$\beta_x$ & \paramsbetax \\ 
+$\beta_a$ & \paramsbetaa \\ 
+$\beta_{st}$ & \paramsbetast \\ 
+$\beta_{w}$ & \paramsbetaw \\ 
+$\zeta$ & \paramszeta \\ 
+\hline 
+
+\multicolumn{2}{l}{Distribution of observables }  \\
+\hline
+
+
+$\mu_{x\_reg}$ & \paramsparamsxregmu \\
+$\sigma_{x\_reg}$ & \paramsparamsxregsigma \\
+$\mu_{x\_geo}$ & \paramsparamsxgeomu \\
+$\sigma_{x\_geo}$ & \paramsparamsxgeosigma \\
+
+$\mu_{CC}$ & \paramsparamsCCmu \\
+$\sigma_{CC}$ & \paramsparamsCCsigma \\ 
+$\mu_{x}$ & \paramsparamsxmu \\
+$\sigma_{x}$ & \paramsparamsxsigma \\
+$\mu_{a}$ & \paramsparamsamu \\
+$\sigma_{a}$ & \paramsparamsasigma \\
+\hline
+\multicolumn{2}{l}{Distribution of unobservables }  \\
+\hline
+$\mu_{\varepsilon_H}$ & \paramsparamsepsilonHmu \\ 
+$\sigma_{\varepsilon_H}$ & \paramsparamsepsilonHsigma \\ 
+
+$\mu_{\varepsilon_L}$ & \paramsparamsepsilonLsigma \\ 
+$\sigma_{\varepsilon_L}$ & \paramsparamsepsilonLmu \\ 
+
+$\mu_{\varepsilon_a}$ & \paramsparamsepsilonasigma \\ 
+$\sigma_{\varepsilon_a}$ & \paramsparamsepsilonamu \\
+
+\hline
 \end{tabular}
 \end{center}
 \end{table}
+
+
+\section{Estimation Procedure}
+
+\subsection{Labor Demand Shocks}
+In Diamond's paper, she uses Bartik shocks ($\Delta B_{jt}^H$ and $\Delta B_{jt}^L$) as exogenous local productivity changes, such that 
+\begin{align*}
+    \Delta \varepsilon^H_{jt} &= \kappa_{BHH} \Delta B^H_{jt} + \kappa_{BHL} \Delta B^L_{jt} + \Delta \tilde{\epsilon}_{jt}^H \\  
+    \Delta \varepsilon^L_{jt} &= \kappa_{BLH} \Delta B^H_{jt} + \kappa_{BLL} \Delta B^L_{jt} + \Delta \tilde{\epsilon}_{jt}^H. 
+\end{align*} 
+Here $\Delta \varepsilon_{jt}^X$ ($X \in \{H, L\}$) represent the high and low skill exogenous productivity changes in city $j$ in year $t$ (relative to 1980) and $\Delta \tilde{\varepsilon}_{jt}^X$ the components that are uncorrelated with the Bartik local labor demand shocks. For the purposes of the estimation procedure, we will asssume we have access to a similar demand shifter
+$\Delta Z_{jt}^{X}$. Thus, 
+$$ \Delta \varepsilon_{jt}^X = \alpha_{XL} \Delta Z_{jt}^L 
+ + \alpha_{XH} \Delta Z_{jt}^H + \Delta \tilde{\varepsilon}_{jt}^X, \quad X\in \{H,L\}$$
+
+ where $\tilde{\varepsilon}_{jt}^X \perp \Delta Z_{jt}^H, \Delta Z_{jt}^L$.
+
+ In words, this says that there are some (worker-type specific) common factors  that affect the unobserved  component of the change in the log labor demand curves (for both skill types), but does not affect them directly. By construction, this implies that at the true parameter values, $$E[\Delta \tilde\varepsilon_{jt}^X \Delta Z_{jt}^Y]=0, \forall X,Y \in \{H,L\} \times \{H,L\}.$$ 
+
+ This is our first set of moment conditions. 
+
+ \subsection{Labor Demand}
+
+ We parameterize changes in labor demand as,
+ $$\Delta w_{jt}^H = \gamma_{HH} \Delta \ln H_{jt} + \gamma_{HL}\Delta \ln L_{jt} + \Delta \varepsilon_{jt}^H$$
+$$\Delta w_{jt}^L = \gamma_{LH} \Delta \ln H_{jt} + \gamma_{LL}\Delta \ln L_{jt} + \Delta \varepsilon_{jt}^L$$
+Substituting in our demand instruments in place of $\Delta\varepsilon_{jt}^X$:
+ $$\Delta w_{jt}^H = \gamma_{HH} \Delta \ln H_{jt} + \gamma_{HL}\Delta \ln L_{jt} + \gamma_{BHH}\Delta Z_{jt}^H  + \gamma_{BHL}\Delta Z_{jt}^L +\Delta \tilde{\varepsilon}_{jt}^H$$
+$$\Delta w_{jt}^L = \gamma_{LH} \Delta \ln H_{jt} + \gamma_{LL}\Delta \ln L_{jt} + \gamma_{BLH}\Delta Z_{jt}^H  + \gamma_{BLL}\Delta Z_{jt}^L +\Delta \tilde{\varepsilon}_{jt}^L$$
+We identify the labor demand elasticities, $(\gamma_{HH}, \gamma_{HL}, \gamma_{LH}, \gamma_{LL})$ using variation in labor supply that is uncorrelated with unobserved changes in local productivity $(\Delta\tilde{\varepsilon}_{jt}^H, \Delta\tilde{\varepsilon}_{jt}^L)$, namely the interaction of our labor demand shocks with local housing supply elasticity. Specifically, the moment conditions are
+$$E(\Delta\tilde{\varepsilon}_{jt}^X \psi) = 0$$
+for all $\psi \in \{\Delta Z_{jt}^X x_j^{reg}, \Delta Z_{jt}^X x_j^{geo}\}$ and for all $X\in\{L,H\}$.
+
+\subsection{Housing Supply}
+
+The housing supply curve in changes is given as 
+$$
+\Delta r_{jt} = \Delta \log( \iota_t )+ (\varphi + \varphi^{geo}\exp(x_j^{geo}) + \varphi^{reg}\exp(x^{reg}_j))\Delta \log (HD_{jt}) + \Delta \log(CC_{jt}),
+$$
+where 
+$$
+HD_{jt} = L_{jt} \frac{\zeta W^L_{jt}}{R_{jt}} + H_{jt} \frac{\zeta W^H_{jt}}{R_{jt}} .
+$$
+Specifically, the moment conditions are 
+$$
+E(\Delta \ln (CC_{jt}) \psi) = 0 
+$$
+for all $\psi \in \{\Delta Z^X_{jt}, \Delta Z_{jt}^X x_j^{reg}, \Delta Z_{jt}^X x_j^{geo}\}$ and for all $X\in\{L,H\}$.
+
+\subsection{Labor Supply}
+
+Recall that indirect utility for worker $i$ of city $j$ is,
+$$V_{ijt} = \delta_{jt}^z + x_j^{st}st_i\beta^{st}z_i+\varepsilon_{ijt}$$
+where
+$$\delta_{jt} = (w_{jt}-\zeta r_{jt})\beta^w z_i + a_{jt}\beta^az_i + x_{jt}^A\beta^xz_i$$
+Taking differences,
+$$\Delta\delta_{jt}^z = (\Delta w_{jt}-\zeta \Delta r_{jt})\beta^w z_i + \Delta a_{jt}\beta^az_i + \Delta\xi_{jt}^z$$
+where $\Delta\xi_{jt}^z\equiv \Delta x_{jt}^A\beta^xz_i$. This will again be uncorrelated with the demand shocks and their interaction with supply elasticities so our moment restrictions are,
+$$
+E(\Delta \xi_{jt}^z \psi) = 0 
+$$
+for all $\psi \in \{\Delta Z_{jt}^X, \Delta Z_{jt}^X x_j^{reg}, \Delta Z_{jt}^X x_j^{geo}\}$ and for all $X\in\{L,H\}$.
+
+
+\subsection{Amenity Supply}
+Differencing the amenity supply implies 
+$$
+\Delta a_{jt} = \varphi^a \Delta \log \left(\frac{H_{jt}}{L_{jt}}\right) + \Delta \epsilon^a.
+$$
+We identify the elasticity of amenity supply $\varphi^a$ by instrumenting in the employment ratio with our instrument. That is, we have moment restrictions $$
+E[\Delta\epsilon^a_{jt} \psi] = 0$$
+where $\psi \in \{\Delta Z^X_{jt}, \Delta Z_{jt}^X x_j^{reg}, \Delta Z_{jt}^X x_j^{geo}\}$ and for all $X\in\{L,H\}$.
+
+\subsection{Estimation Procedure}
+
+Following Berry, Levinsohn, and Pakes (1995) and the paper itself, we estimate the parameters through a nested fixed point procedure. In particular, in the outer loop, we run GMM over the ``linear" parameters: $\gamma_{HH}, \gamma_{HL}, \gamma_{LL}, \gamma_{LH}, \alpha_{HH}, \alpha_{HL}, \alpha_{LH}, \alpha_{LL},  \iota, \phi, \phi_{geo}, \phi_{reg}, \beta_{st}, \sigma_x$. For each conjectured value of the linear parameters, we recover the implied value of the nonlinear parameters using the BLP inversion:  Recall we have $$V_{ijt} = \delta_{jt}^z + x_j^{st}st_i\beta^{st}z_i + \varepsilon_{ijt}.$$ By BLP , there is a unique vector of mean utilities $\delta_{jt}$ that imply the choice shares $H_{jt}, L_{jt}$ in the data.  From there, section D shows how $\Delta \delta_{jt}^z$, $\Delta p_{jt}$, and the demographic variables form a residual term  that is orthogonal to our instrument $\Delta Z_{jt}^x$ (and any interactions with local housing supply elasticities) at the true parameter values. Therefore, we use the moment conditions from that section to identify the nonlinear parameters in the inner loop. 
+
+
+We run our GMM via two-step, weighting with the identity matrix in the first step and the empirical variance-covariance matrix of our first step residuals in the second step. Standard errors are obtained using the usual GMM ``sandwich" formula.
+
+
+
+
+%\begin{enumerate}
+%\end{enumerate}
 
 % \section{Extensions}
 
@@ -193,7 +349,7 @@ $\hat{\sigma^2}$ & 1.145 & NA & NA \\
 % where $L$ is land and is sold by oligopolistic landowners, and $B$ is construction costs, which are provided competitively.
 
 % We can also think about the fact that firms produce houses, but households rent. In this case, 
-% $$P_{jt} = \sum_{s=t}^\infty \frac{\E[R_{js}]}{(1+r)^s} \approx \frac{R_{jt}}{r-g}$$
+% $$r_{jt} = \sum_{s=t}^\infty \frac{\E[R_{js}]}{(1+r)^s} \approx \frac{R_{jt}}{r-g}$$
 % where $r$ is the discount rate and $g$ is the expected growth rate of rental prices. This is endogenous due to the endogenous supply of amenities.
 
 % %% TODO: Think about transition dynamics, 
@@ -220,7 +376,7 @@ $\hat{\sigma^2}$ & 1.145 & NA & NA \\
 % In the next section, we will attempt to endogenize this discount rate.
 
 % \subsubsection{Housing Demand}
-% Consider a household $i$ that at time $t$ chooses a city $j$ to live in and whether to purchase a home or rent. The household will earn wage $W_{ijt}$ and will pay rent $R_{jt}$ in every period, or it will pay $P_{jt}$ once at $t=t_0$. The household has Cobb-Douglas preferences between a homogenous consumption good, $C$, and local amenities $A_{ijt}$, and also has an idiosyncratic, time-invariant preference for each city, $\varepsilon_{ij}$. 
+% Consider a household $i$ that at time $t$ chooses a city $j$ to live in and whether to purchase a home or rent. The household will earn wage $W_{ijt}$ and will pay rent $R_{jt}$ in every period, or it will pay $r_{jt}$ once at $t=t_0$. The household has Cobb-Douglas preferences between a homogenous consumption good, $C$, and local amenities $A_{ijt}$, and also has an idiosyncratic, time-invariant preference for each city, $\varepsilon_{ij}$. 
 
 % The utility of renting for $T$ periods is,
 % $$U^R_{it_0} = \sum_{t=t_0}^T\max_{j, C_t} \beta^t (1-\zeta) \log C_t + \zeta \log A_{ijt} + \varepsilon_{ij}$$
